--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         
         <!-- 永久地址 -->
         <div class="permanent-url">
-            永久地址: <a href="
+            永久地址: https://15224901553-star.github.io/wannb.com/<a href="
 " target="_blank"></a>（收藏不迷路）
             <div class="copyright">
             &copy; <span id="current-year"></span> 
